--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<!-- <script src="/public/assets/js/buttons.js"></script> -->
-	
+	<style>
+@import url('https://fonts.googleapis.com/css?family=Baloo+Bhai');
+</style>
 
 	<title>Yummy Lil Burgerino!</title>
 	<!-- Materialize CSS -->
@@ -19,8 +21,9 @@
 		<header class="header">
 			<div class="row center card amber accent-2 z-depth-1">
 				<h2 class="teal-text text-darken-2">
-					<img src="/assets/img/burger.png">
-					<br>Yummy Lil Burgerino!</h2>
+					<img class="materialboxed row center" width="250" src="/assets/img/burger.png">
+										<h2>Yummy Lil Burgerino!</h2>
+
 			</div>
 		</header>
 		<!-- Page Content goes here -->
