--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col s6">
     <div class="card-panel amber darken-1">
-      <h4 class="teal-text text-darken-4 flow-text">Burgers That Are Not Eaten</h4>
+      <h4 class="teal-text text-darken-4 flow-text">Not Yet Eaten:</h4>
     </div>
     <ul class="collection">
       {{#each burgers}} {{#unless devoured}} {{> burgers/burger-block devoured=false}} {{/unless}} {{/each}}
@@ -9,7 +9,7 @@
   </div>
   <div class="col s6">
     <div class="card-panel amber darken-1">
-      <h4 class="teal-text text-darken-4 flow-text">Burgers That Are Eaten</h4>
+      <h4 class="teal-text text-darken-4 flow-text">Eaten:</h4>
     </div>
     <ul class="collection">
       {{#each burgers}} {{#if devoured}} {{> burgers/burger-block devoured=true}} {{/if}} {{/each}}
