--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,8 +1,8 @@
 
 li {
-    padding: 5px;
-    margin: 5px;
+    padding: 15px;
     background: #faebd7;
+    font-size: 20px;
   }
   
   .label, p, li, button {
