--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,10 +1,12 @@
 <li>
 	{{burger_name}}
-
+<div class="right">
 	<button class="btn waves-effect waves-light change-burger" data-id="{{id}}" data-newBurger="{{sleep}}">
 		{{#if devoured}}You ate me! {{else}} Eat me!{{/if}}
 	</button>
 
-	<button class="btn waves-effect waves-light delete-burger" data-id="{{this.id}}">Delete me!</button>
+	<button class="btn waves-effect waves-light delete-burger" data-id="{{this.id}}"><i class="material-icons">delete</i>
+</button>
+</div>
 </li>
 
